tests/errors/atomic_01.f90
program atomic
    use iso_fortran_env
    integer :: atom[*]
    call atomic_add (atom[1], this_image())
end program atomic